k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app-redis
spec:
  containers:
    - image: bitnami/redis:6.2.8
      name: test-app-redis
      ports:
        - containerPort: 6001
---
apiVersion: v1
kind: Pod
metadata:
  name: app-model
spec:
  containers:
    - build: ./app-model
      name: app-model
      ports:
        - containerPort: 6002
---
apiVersion: v1
kind: Pod
metadata:
  name: app-controller
spec:
  containers:
    - build: ./app-controller
      name: app-controller
      ports:
        - containerPort: 6003
